Fix Google Maps iframe responsive on mobile

--- a/style.css
+++ b/style.css
@@ -379,6 +379,11 @@ footer p {
         height: 70vh;
         margin-top: 56px;
     }
+
+    . info-iframe {
+        width: 100%;
+        height: 300px;
+    }
 }
 
 @media (max-width: 480px) {
